# minifigures-webshop-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
src/minifigures_api/: api.py
src/minifigures_api/routers/: __init__.py  predict.py  utils.py
src/minifigures_app/: utils.py  🏠_Home.py
src/minifigures_app/pages/: 0_🎭_Product.py
src/minifigures_model/: __init__.py
tests/: __init__.py  test_api.py  test_import.py
